# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  mandelbrot.cpp
